--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -61,3 +61,5 @@ Style/HashTransformValues:
   Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
+Layout/EndOfLine:
+  Enabled: false
