--- a/config/database.yml
+++ b/config/database.yml
@@ -83,6 +83,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: spendtracker_production
   username: spendtracker
   password: <%= ENV["SPENDTRACKER_DATABASE_PASSWORD"] %>
