Update deploy configs

--- a/config/database.yml
+++ b/config/database.yml
@@ -84,6 +84,6 @@ test:
 production:
   <<: *default
   url: <%= ENV["DATABASE_URL"] %>
-  database: spendtracker_production
-  username: spendtracker
+  database: spend_tracker
+  username: spend_tracker_user
   password: <%= ENV["SPENDTRACKER_DATABASE_PASSWORD"] %>
